feat: add API update and delete books
