# model/book.go
@@ -1,13 +1,19 @@
 package model
 
+type Book struct {
+	ID     string `json:"id"`
+	Title  string `json:"title"`
+	Author string `json:"author"`
+	Year   int    `json:"year"`
+}
+
 type CreateBookRequest struct {
 	Title  string `json:"title"`
 	Author string `json:"author"`
 	Year   int    `json:"year"`
 }
 
-type Book struct {
-	ID     string `json:"id"`
+type UpdateBookRequest struct {
 	Title  string `json:"title"`
 	Author string `json:"author"`
 	Year   int    `json:"year"`
